@@ -185,9 +185,17 @@ def pytest_runtest_setup(item):
 def pytest_runtest_makereport(__multicall__, item, call):
     if not isinstance(item, py.test.collect.Function):
         return
-    evalxfail = getattr(item, '_evalxfail', None)
-    if not evalxfail:
-        return
+    if not (call.excinfo and 
+        call.excinfo.errisinstance(py.test.xfail.Exception)):
+        evalxfail = getattr(item, '_evalxfail', None)
+        if not evalxfail:
+            return
+    if call.excinfo and call.excinfo.errisinstance(py.test.xfail.Exception):
+        rep = __multicall__.execute()
+        rep.keywords['xfail'] = "reason: " + call.excinfo.value.msg
+        rep.skipped = True
+        rep.failed = False
+        return rep
     if call.when == "setup":
         rep = __multicall__.execute()
         if rep.skipped and evalxfail.istrue():
